previous button positioning

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -162,6 +162,10 @@ input[type="radio"]:checked + div {
   @extend .bottom-shadow;
 }
 
+.container-relative {
+  position: relative;
+}
+
 .translucent {
   color: white;
   background-color: rgba(255, 255, 255, 0.2);
@@ -202,6 +206,15 @@ input[type="radio"]:checked + div {
 .button-large {
   padding: 1em 2em;
   margin-right: 0;
+}
+
+.button-previous {
+  position: absolute;
+  top: 40px;
+  left: 30px;
+  background-color: transparent;
+  color: $primary;
+  border: none;
 }
 
 .plus-button {
