font-weight and bottom icon styles

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -203,6 +203,10 @@ input[type="radio"]:checked + div {
   color: $primary;
 }
 
+.icon-bottom {
+  margin-top: 1.5em;
+}
+
 .button-large {
   padding: 1em 2em;
   margin-right: 0;
