--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -86,7 +86,10 @@ li {
 
 #splash-button {
   @extend .button-red;
-  @extend .icon-button;
+  span {
+    position: relative;
+    top: -5px;
+  }
 }
 
 #rand {
